@@ -177,9 +177,10 @@ n=`expr $n + 1`
 
 if test -f keyname
 then
-	echo_i "checking update forwarding to with sig0 ($n)"
+	echo_i "checking update forwarding to with sig0 (expected to fail) ($n)"
 	ret=0
 	keyname=`cat keyname`
+	# SIG(0) is removed, update is expected to fail.
 	$NSUPDATE -k $keyname.private -- - <<EOF
 	server 10.53.0.3 ${PORT}
 	zone example2
@@ -187,8 +188,9 @@ then
 	update add unsigned.example2. 600 TXT Foo
 	send
 EOF
-	$DIG -p ${PORT} unsigned.example2 A @10.53.0.1 > dig.out.ns1.test$n
-	grep "status: NOERROR" dig.out.ns1.test$n > /dev/null || ret=1
+	>nsupdate.out.$n 2>&1 && ret=1
+	$DIG -p ${PORT} unsigned.example2 A @10.53.0.1 > dig.out.ns1.test$n || ret=1
+	grep "status: NOERROR" dig.out.ns1.test$n > /dev/null && ret=1
 	if [ $ret != 0 ] ; then echo_i "failed"; fi
 	status=`expr $status + $ret`
 	n=`expr $n + 1`
